--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
     </div>
   </div>
   <div class="content">
-    <h1>Welcome to My Radio & Movie Background Website</h1>
+    <h1>MBS Hybrid Klazienaveen</h1>
     <section>
-      <h2>Listen to Radio 538</h2>
       <audio controls>
         <source src="https://22333.live.streamtheworld.com/RADIO538.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </section>
-    <section>
-      <h2>Weather in Klazienaveen</h2>
-      <!-- Weather widget: Open-Meteo example (no API key needed) -->
-      <iframe 
-        src="https://widget.open-meteo.com/?latitude=52.7242&longitude=6.9636&hourly=temperature_2m,weathercode&current_weather=true&forecast_days=1&theme=dark&wind_speed_unit=kmh&temperature_unit=celsius" 
-        style="border-radius:10px;border:none;width:350px;height:200px;box-shadow:0 2px 12px #0008;"
-        title="Weather in Klazienaveen"
-        loading="lazy"
-      ></iframe>
-    </section>
+<section>
+  <h2>Weather in Klazienaveen (Buienradar)</h2>
+  <img 
+    src="https://www.buienradar.nl/resources/images/buienradar/256x256.png" 
+    alt="Buienradar Nederland" 
+    style="max-width:100%;border-radius:10px;box-shadow:0 2px 12px #0008;">
+  <br>
+  <a href="https://www.buienradar.nl/weer/klazienaveen/nl/2752798" target="_blank" style="color:#fff;text-shadow:0 1px 4px #000;">
+    View full forecast on Buienradar
+  </a>
+</section>
   </div>
 </body>
 </html>
