--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
         Your browser does not support the audio element.
       </audio>
     </section>
-<section>
-  <h2>Weather in Klazienaveen (Buienradar)</h2>
-  <img 
-    src="https://www.buienradar.nl/resources/images/buienradar/256x256.png" 
-    alt="Buienradar Nederland" 
-    style="max-width:100%;border-radius:10px;box-shadow:0 2px 12px #0008;">
-  <br>
-  <a href="https://www.buienradar.nl/weer/klazienaveen/nl/2752798" target="_blank" style="color:#fff;text-shadow:0 1px 4px #000;">
-    View full forecast on Buienradar
-  </a>
-</section>
+    <section>
+      <h2>Weather in Klazienaveen</h2>
+      <!-- Meteomatics Free Weather Widget for Klazienaveen -->
+      <iframe
+        src="https://www.meteomatics.com/en/weather-widget/three-days?lat=52.7242&lon=6.9636&loc=Klazienaveen"
+        style="border-radius:10px;border:none;width:350px;height:300px;box-shadow:0 2px 12px #0008;"
+        title="Weather in Klazienaveen"
+        loading="lazy"
+      ></iframe>
+      <br>
+      <a href="https://www.meteomatics.com/en/weather-widgets/" target="_blank" style="color:#fff;text-shadow:0 1px 4px #000;">
+        More weather widgets by Meteomatics
+      </a>
+    </section>
   </div>
 </body>
 </html>
