--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <h1>Welcome to My Radio & Slideshow Background Website</h1>
     <section>
       <h2>Luister naar Radio</h2>
-      <!-- Dropdown met zenders -->
+      <!-- Dropdown met zenders (https://gitlab.com/Brady_The/live_streams.sii/-/blob/main/live_streams.sii) -->
       <select id="radioSelect">
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
         <option value="https://22333.live.streamtheworld.com/SKYRADIO.mp3">Sky Radio</option>
-        <option value="https://icecast-qmusicnl-cdp.triple-it.nl/Qmusic_nl_live_96.mp3">Qmusic</option>
+        <option value="https://22593.live.streamtheworld.com/VERONICA.mp3">Sky Radio</option>
+        <option value="https://21293.live.streamtheworld.com/QMUSIC.mp3">Qmusic</option>
       </select>
       <br><br>
       <!-- Één speler -->
