--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 </head>
 <body>
   <div id="video-background">
-    <iframe
-      src="https://www.youtube.com/embed/n5Xgobco2zs?autoplay=1&mute=1&controls=0&loop=1&playlist=n5Xgobco2zs&modestbranding=1&showinfo=0&iv_load_policy=3"
-      allow="autoplay"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
+    <video id="bgVideo" autoplay loop muted playsinline>
+      <source src="background.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
   <div class="content">
     <h1>MBS Klazienaveen</h1>
@@ -41,7 +39,6 @@
     </section>
     <section>
       <h2>Weather in Klazienaveen</h2>
-      <!-- MeteoBlue Weather Widget for Klazienaveen -->
       <iframe class="weather" src="https://www.meteoblue.com/en/weather/widget/three/klazienaveen_the-netherlands_2752798?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image" frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 460px; height: 592px"></iframe>
       <div>
         <!-- DO NOT REMOVE THIS LINK -->
