--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="video-background">
-    <video id="bgVideo" autoplay loop muted playsinline>
-      <source src="VideoHomepagina.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+  <div id="video-background"></div>
+  <script>
+  const images = ['foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg', 'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg'];
+  let idx = 0;
+  setInterval(() => {
+    document.getElementById('video-background').style.backgroundImage = `url('${images[idx]}')`;
+    idx = (idx + 1) % images.length;
+  }, 50000); // elke 50 seconden wisselen
+  </script>
   <div class="content">
     <h1>MBS Klazienaveen</h1>
     <section>
