--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+
+<div class="buienradar-container">
+<iframe src="https://gadgets.buienradar.nl/gadget/zoommap/?lat=52.72515&lng=6.98684&overname=2&zoom=8&naam=7891 AG&size=2&voor=1" scrolling=no width=256 height=256 frameborder=no></iframe>
+  </div>
+
   <div id="video-background"></div>
   <script>
   const images = ['foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg', 'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg'];
@@ -17,29 +23,81 @@
     document.getElementById('video-background').style.backgroundImage = `url('${images[idx]}')`;
   }, 50000); // elke 50 seconden wisselen
   </script>
+
   <div class="weather-container">
-<iframe src="https://www.meteoblue.com/en/weather/widget/three?geoloc=detect&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 460px; height: 591px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/en/weather/week/index" target="_blank" rel="noopener">meteoblue</a>
-</div>
-      <!-- DO NOT REMOVE THIS LINK -->
-      <a href="https://www.meteoblue.com/en/weather/week/klazienaveen_the-netherlands_2752798" target="_blank" rel="noopener">meteoblue</a>
+    <iframe src="https://www.meteoblue.com/en/weather/widget/three/klazienaveen_the-netherlands_2752798?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 460px; height: 590px">
+</iframe>
+    <div>
+    <!-- DO NOT REMOVE THIS LINK -->
+    <a href="https://www.meteoblue.com/en/weather/week/klazienaveen_the-netherlands_2752798" target="_blank" rel="noopener">meteoblue</a>
     </div>
   </div>
+
+<div class="nos-widget">
+  <h3>Laatste NOS Nieuws</h3>
+  <ul id="nos-feed"></ul>
+</div>
+<script>
+  fetch("https://api.rss2json.com/v1/api.json?rss_url=https://feeds.nos.nl/nosnieuwsalgemeen")
+    .then(response => response.json())
+    .then(data => {
+      let items = data.items.slice(0, 5); // 5 laatste berichten
+      let list = document.getElementById("nos-feed");
+      items.forEach(item => {
+        let li = document.createElement("li");
+        li.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
+        list.appendChild(li);
+      });
+    });
+</script>
+
   <div class="content">
     <h1>MBS Klazienaveen</h1>
     <section>
       <h2>Luister naar Radio</h2>
-      <!-- Dropdown met zenders -->
+     <!-- Dropdown met zenders -->
       <select id="radioSelect">
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
         <option value="https://22333.live.streamtheworld.com/SKYRADIO.mp3">Sky Radio</option>
+        <option value="https://icecast.omroep.nl/radio5-bb-mp3">Radio 5</option>
         <option value="https://22593.live.streamtheworld.com/VERONICA.mp3">Radio Veronica</option>
-        <option value="https://21293.live.streamtheworld.com/QMUSIC.mp3">Qmusic</option>
+        <option value="https://icecast-qmusicnl-cdp.triple-it.nl/Qmusic_nl_live.mp3">Qmusic</option>
+        <option value="http://stream.antenne.de/antenne/stream/mp3">ANTENNE BAYERN</option>
+        <option value="http://topcongofm2.ice.infomaniak.ch/topcongofm2-96.mp3">Top Congo FM</option>
       </select>
       <br><br>
-      <audio id="radioPlayer" controls autoplay>
-        <source src="https://22333.live.streamtheworld.com/RADIO538.mp3" type="audio/mpeg">
-        Je browser ondersteunt geen audio.
-      </audio>
+<audio id="radioPlayer" autoplay>
+  <source src="https://22333.live.streamtheworld.com/RADIO538.mp3" type="audio/mpeg">
+  Je browser ondersteunt geen audio.
+</audio>
+
+<!-- Eigen knop -->
+<button id="playPauseBtn">⏯ Play/Pause</button>
+
+<script>
+  const radioSelect = document.getElementById('radioSelect');
+  const radioPlayer = document.getElementById('radioPlayer');
+  const playPauseBtn = document.getElementById('playPauseBtn');
+
+  // Standaard volume 100%
+  radioPlayer.volume = 1.0;
+
+  // Wissel zender
+  radioSelect.addEventListener('change', function() {
+    radioPlayer.src = this.value;
+    radioPlayer.play();
+  });
+
+  // Play/pauze knop
+  playPauseBtn.addEventListener('click', () => {
+    if (radioPlayer.paused) {
+      radioPlayer.play();
+    } else {
+      radioPlayer.pause();
+    }
+  });
+</script>
+
       <script>
         const radioSelect = document.getElementById('radioSelect');
         const radioPlayer = document.getElementById('radioPlayer');
@@ -48,6 +106,7 @@
           radioPlayer.play();
         });
       </script>
+
     </section>
   </div>
 </body>
