--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
   
 
-<div class="buienradar-container">
-<iframe src="https://gadgets.buienradar.nl/gadget/zoommap/?lat=52.72515&lng=6.98684&overname=2&zoom=8&naam=7891 AG&size=2&voor=1" scrolling=no width=256 height=256 frameborder=no></iframe>
-  </div>
+<div style="max-width:400px"><div style="position:relative;overflow:hidden;width:100%;padding-bottom:calc(100% + 43px)"><iframe style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%;height:100%" title="widget" frameBorder="0" scrolling="no" loading="lazy" src="https://www.weeronline.nl/widget/radar?id=4057148&circle=true&noAnalytics=true"></iframe></div></div>
 
   <div id="video-background"></div>
   <script>
