--- a/index.html
+++ b/index.html
@@ -1,59 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Radio & Movie Background</title>
+  <title>MBS Klazienaveen - Radio & Weer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-
-<div style="max-width:400px"><div style="position:relative;overflow:hidden;width:100%;padding-bottom:calc(100% + 43px)"><iframe style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%;height:100%" title="widget" frameBorder="0" scrolling="no" loading="lazy" src="https://www.weeronline.nl/widget/radar?id=4057148&circle=true&noAnalytics=true"></iframe></div></div>
-
+  <!-- Achtergrondafbeeldingen -->
   <div id="video-background"></div>
   <script>
-  const images = ['foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg', 'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg'];
-  let idx = 0;
-  // Zet direct de eerste achtergrond
-  document.getElementById('video-background').style.backgroundImage = `url('${images[idx]}')`;
-  setInterval(() => {
-    idx = (idx + 1) % images.length;
-    document.getElementById('video-background').style.backgroundImage = `url('${images[idx]}')`;
-  }, 50000); // elke 50 seconden wisselen
+    // Zet direct de eerste achtergrond, en wissel elke 50 seconden
+    const images = [
+      'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg',
+      'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg'
+    ];
+    let idx = 0;
+    const bg = document.getElementById('video-background');
+    function setBG() {
+      bg.style.backgroundImage = `url('${images[idx]}')`;
+      bg.style.backgroundColor = '';
+    }
+    setBG();
+    setInterval(() => {
+      idx = (idx + 1) % images.length;
+      setBG();
+    }, 50000);
   </script>
 
-  <div class="weather-container">
-    <iframe src="https://www.meteoblue.com/en/weather/widget/three/klazienaveen_the-netherlands_2752798?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 460px; height: 590px">
-</iframe>
-    <div>
-    <!-- DO NOT REMOVE THIS LINK -->
-    <a href="https://www.meteoblue.com/en/weather/week/klazienaveen_the-netherlands_2752798" target="_blank" rel="noopener">meteoblue</a>
+  <!-- Weeronline widget (links boven) -->
+  <div class="weeronline-container">
+    <div class="weeronline-widget">
+      <iframe
+        title="Weeronline Radar"
+        frameborder="0"
+        scrolling="no"
+        loading="lazy"
+        src="https://www.weeronline.nl/widget/radar?id=4057148&circle=true&noAnalytics=true"
+        style="width:100%;height:350px;">
+      </iframe>
     </div>
   </div>
 
-<div class="nos-widget">
-  <h3>Laatste NOS Nieuws</h3>
-  <ul id="nos-feed"></ul>
-</div>
-<script>
-  fetch("https://api.rss2json.com/v1/api.json?rss_url=https://feeds.nos.nl/nosnieuwsalgemeen")
-    .then(response => response.json())
-    .then(data => {
-      let items = data.items.slice(0, 5); // 5 laatste berichten
-      let list = document.getElementById("nos-feed");
-      items.forEach(item => {
-        let li = document.createElement("li");
-        li.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
-        list.appendChild(li);
-      });
-    });
-</script>
+  <!-- Meteoblue Widget (rechts boven) -->
+  <div class="weather-container">
+    <iframe
+      src="https://www.meteoblue.com/en/weather/widget/three/klazienaveen_the-netherlands_2752798?geoloc=fixed&nocurrent=0&noforecast=0&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=image"
+      frameborder="0"
+      scrolling="NO"
+      allowtransparency="true"
+      sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox"
+      style="width: 460px; height: 590px;">
+    </iframe>
+    <div>
+      <a href="https://www.meteoblue.com/en/weather/week/klazienaveen_the-netherlands_2752798" target="_blank" rel="noopener">meteoblue</a>
+    </div>
+  </div>
 
+  <!-- NOS Nieuws Widget (links onder) -->
+  <div class="nos-widget">
+    <h3>Laatste NOS Nieuws</h3>
+    <ul id="nos-feed"></ul>
+  </div>
+  <script>
+    // Haal de laatste NOS nieuwsberichten op
+    fetch("https://api.rss2json.com/v1/api.json?rss_url=https://feeds.nos.nl/nosnieuwsalgemeen")
+      .then(response => response.json())
+      .then(data => {
+        let items = data.items.slice(0, 5);
+        let list = document.getElementById("nos-feed");
+        items.forEach(item => {
+          let li = document.createElement("li");
+          li.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
+          list.appendChild(li);
+        });
+      });
+  </script>
+
+  <!-- Hoofdcontent en radio -->
   <div class="content">
     <h1>MBS Klazienaveen</h1>
     <section>
       <h2>Luister naar Radio</h2>
-     <!-- Dropdown met zenders -->
       <select id="radioSelect">
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
         <option value="https://22333.live.streamtheworld.com/SKYRADIO.mp3">Sky Radio</option>
@@ -64,47 +91,29 @@
         <option value="http://topcongofm2.ice.infomaniak.ch/topcongofm2-96.mp3">Top Congo FM</option>
       </select>
       <br><br>
-<audio id="radioPlayer" autoplay>
-  <source src="https://22333.live.streamtheworld.com/RADIO538.mp3" type="audio/mpeg">
-  Je browser ondersteunt geen audio.
-</audio>
-
-<!-- Eigen knop -->
-<button id="playPauseBtn">⏯ Play/Pause</button>
-
-<script>
-  const radioSelect = document.getElementById('radioSelect');
-  const radioPlayer = document.getElementById('radioPlayer');
-  const playPauseBtn = document.getElementById('playPauseBtn');
-
-  // Standaard volume 100%
-  radioPlayer.volume = 1.0;
-
-  // Wissel zender
-  radioSelect.addEventListener('change', function() {
-    radioPlayer.src = this.value;
-    radioPlayer.play();
-  });
-
-  // Play/pauze knop
-  playPauseBtn.addEventListener('click', () => {
-    if (radioPlayer.paused) {
-      radioPlayer.play();
-    } else {
-      radioPlayer.pause();
-    }
-  });
-</script>
-
+      <audio id="radioPlayer" autoplay>
+        <source src="https://22333.live.streamtheworld.com/RADIO538.mp3" type="audio/mpeg">
+        Je browser ondersteunt geen audio.
+      </audio>
+      <button id="playPauseBtn">⏯ Play/Pause</button>
       <script>
+        // Radio functionaliteit
         const radioSelect = document.getElementById('radioSelect');
         const radioPlayer = document.getElementById('radioPlayer');
+        const playPauseBtn = document.getElementById('playPauseBtn');
+        radioPlayer.volume = 1.0;
         radioSelect.addEventListener('change', function() {
           radioPlayer.src = this.value;
           radioPlayer.play();
         });
+        playPauseBtn.addEventListener('click', () => {
+          if (radioPlayer.paused) {
+            radioPlayer.play();
+          } else {
+            radioPlayer.pause();
+          }
+        });
       </script>
-
     </section>
   </div>
 </body>
