--- a/index.html
+++ b/index.html
@@ -82,12 +82,19 @@
   <h1>MBS Klazienaveen</h1>
     <section>
       <select id="radioSelect">
+
+        <!-- https://streamurl.link/ -->
+
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
-        <option value="https://22333.live.streamtheworld.com/SKYRADIO.mp3">Sky Radio</option>
+        <option value="https://radiostreamfm.com/listen/dolfijn_97.3_fm/radio.mp3">Dolfijn FM</option>
         <option value="https://icecast.omroep.nl/radio5-bb-mp3">Radio 5</option>
         <option value="https://22593.live.streamtheworld.com/VERONICA.mp3">Radio Veronica</option>
+        <option value="https://22333.live.streamtheworld.com/SKYRADIO.mp3">Sky Radio</option>
+        <option value="https://stream.tukkerfm.nl/tukkerfm">TukkerFM</option>
         <option value="https://icecast-qmusicnl-cdp.triple-it.nl/Qmusic_nl_live.mp3">Qmusic</option>
         <option value="http://stream.antenne.de/antenne/stream/mp3">ANTENNE BAYERN</option>
+        <option value="https://radiovm1.fluidstream.eu/radiovm1.mp3">Radio VM1</option>
+        <option value="https://live.u1-radio.at/u1-tirol-live/">U1 Tirol</option>
         <option value="http://topcongofm2.ice.infomaniak.ch/topcongofm2-96.mp3">Top Congo FM</option>
       </select>
       <br><br>
