--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+fotofo<!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,9 @@
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
       'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg',
-      'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg'
+      'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg',
+      'foto7.jpeg', 'foto8.jpeg', 'foto9.jpeg',
+      'foto10.jpeg
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
