--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ fotofo<!DOCTYPE html>
       'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg',
       'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg',
       'foto7.jpeg', 'foto8.jpeg', 'foto9.jpeg',
-      'foto10.jpeg
+      'foto10.jpeg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
