--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ fotofo<!DOCTYPE html>
     <section>
       <select id="radioSelect">
         <!-- https://streamurl.link/ -->
+        <option value="https://www.youtube.com/watch?v=uOJ6J__L-fo">DJ Ötzi - Sweet Caroline</option>
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
         <option value="https://23603.live.streamtheworld.com/100PNL_MP3_SC">100% NL</option>
         <option value="https://radiostreamfm.com/listen/dolfijn_97.3_fm/radio.mp3">Dolfijn FM</option>
