--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-fotofo<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
@@ -11,10 +11,7 @@ fotofo<!DOCTYPE html>
   <script>
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
-      'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg',
-      'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg',
-      'foto7.jpeg', 'foto8.jpeg', 'foto9.jpeg',
-      'foto10.jpeg'
+      'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg', 'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg', 'foto8.jpeg', 'foto9.jpeg', 'foto10.jpeg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
@@ -71,7 +68,6 @@ fotofo<!DOCTYPE html>
     <section>
       <select id="radioSelect">
         <!-- https://streamurl.link/ -->
-        <option value="https://www.youtube.com/watch?v=uOJ6J__L-fo">DJ Ötzi - Sweet Caroline</option>
         <option value="https://22333.live.streamtheworld.com/RADIO538.mp3">Radio 538</option>
         <option value="https://23603.live.streamtheworld.com/100PNL_MP3_SC">100% NL</option>
         <option value="https://radiostreamfm.com/listen/dolfijn_97.3_fm/radio.mp3">Dolfijn FM</option>
