--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
-      'foto1.jpeg', 'foto2.jpeg', 'foto3.jpeg', 'foto4.jpeg', 'foto5.jpeg', 'foto6.jpeg', 'foto7.jpeg', 'foto8.jpeg', 'foto9.jpeg', 'foto10.jpeg'
+      'foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg', 'foto7.jpg', 'foto8.jpg', 'foto9.jpg', 'foto10.jpg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
