--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
-      'foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg', 'foto7.jpg', 'foto8.jpg', 'foto9.jpg', 'foto10.jpg'
+      'Foto1.jpg', 'Foto2.jpg', 'Foto3.jpg', 'Foto4.jpg', 'Foto5.jpg', 'Foto6.jpg', 'Foto7.jpg', 'Foto8.jpg', 'Foto9.jpg', 'Foto10.jpg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
